# Simu-CELLBM

./: .gitignore  License  README.md
batch/: batchSC3D.sb  eggbatchsC3D.sb  growbatchSC3D.sb  movebatchSC3D.sb  movebatchSC3D1R.sb  movebatchSC3D2R.sb  movebatchSC3D4R.sb  movebatchSC3DRBC.sb  movebatchSC3D_2.sb  movebatchSC3D_3.sb  movebatchSC3D_4.sb  movebatchSC3D_5.sb  movebatchSC3D_6.sb  testbatch.sb
data/: test.stl
data/input_meshes/: RBC.vtk  RBC.vtu  RBC_1.vtk  RBC_1.vtu  RBC_third.vtk  RBC_third.vtu  big_cube.vtk  c_elegans.vtk  c_elegans.vtu  cell_triplet.vtk  chamber1.vtk  close_balls.vtk  close_balls.vtu  cluster.vtk  cluster.vtu  creep.vtk  egg.vtk  four_cell.vtk  four_cell.vtu  lil_ball.vtk  lil_sphere.vtu  lumen_initial_mesh_triangulated.vtk  nucleus.vtk  nucleus.vtu  sphere_0.5R.vtk  sphere_0.5R.vtu  (+25 more)
include/: custom_structures.hpp  global_configuration.hpp  solver.hpp
parameters/: parameters_RBC.xml  parameters_default_dynamic.xml  parameters_default_overdamped.xml  parameters_egg.xml  parameters_move_cell.xml  parameters_move_cell_2.xml  parameters_move_cell_3.xml  parameters_move_cell_4.xml  parameters_move_cell_5.xml  parameters_move_cell_6.xml  parameters_move_cell_dist1.xml  parameters_move_cell_dist2.xml  parameters_move_cell_dist3.xml  parameters_move_cell_dist4.xml  parameters_packed.xml  parameters_shear.xml  parameters_shear_1R.xml  parameters_shear_2R.xml  parameters_shear_4R.xml  parameters_testcase.xml
src/: CMakeLists.txt  solver.cpp
src/LBM/: CMakeLists.txt  IB.cpp  IB_node.cpp  LBM.cpp  LBM_node.cpp  lattice.cpp  mesh_writer.cpp
(+41 files in other folders)
